--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/ungerboeck/job/oc6uafwG'>Ungerboeck Software International Careers - Front End Web Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://ticketino.join.com/jobs/273946-senior-web-developer-net'>Job @ TICKETINO (Z?rich): Senior Web Developer .NET | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -66,11 +70,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Web Application Developer (PHP, JS) at ADVFN.</p>
 <hr/>
-<h5><a href='https://openwt.workable.com/j/9B9CEE2322?viewed=true'>Open Web Technology - Jobs: Backend DEVELOPER Java - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://openwt.workable.com/j/9B9CEE2322?viewed=true'>Open Web Technology - Jobs: Backend DEVELOPER Java - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Backend DEVELOPER Java at Open Web Technology.</p>
 <hr/>
-<h5><a href='https://seequent.workable.com/j/A0DA83F3D2'>Seequent - Jobs: Web Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/A0DA83F3D2'>Seequent - Jobs: Web Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -179,7 +183,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloagain-jobs.join.com/jobs/250448-web-developer'>Job @ helloain (Leonding): WEB DEVELOPER | JOIN</a></h5> 
+<h5><a href='https://helloagain-jobs.join.com/jobs/250448-web-developer'>Job @ helloain (Leonding): WEB DEVELOPER | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -233,7 +237,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -349,7 +353,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -393,7 +397,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=n99jPKwF'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=n99jPKwF'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -460,10 +464,6 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999691996133-java-web-developer-operation'>Woongjin, Inc Java Web Developer &amp; Operation | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
-<hr/>
-<h5><a href='http://junglescout.applytojob.com/apply/w0IgYSyUOh/Web-Developer-3-Month-Contract'>Web Developer, 3 month contract - Jungle Scout - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-18</p>
 <hr/>
 
 
